inclusão de projetos no campo <description>

--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
         <aside id="bio-container">
             <h2>Saulo de Tarso</h2>
             <img id="bio-image" src="img/profile.jpg" alt="Foto de Saulo de Tarso">
-            <p id="welcome-text">console.log ("Coding ...");</p>
+            <p id="welcome-text">console.log ("Coding, Producing and Learning");</p>
                 
             <p class="description">
                 💻dev jr fullstack
             <br>🎓 ADS - UniBH.</br>
-                🚩 Belo Horizonte - MG
+                📍 Belo Horizonte - 🔺 MG
             </p>
 
             <ul id="social-container">
@@ -117,15 +117,16 @@
             
         <p class="description">Minha principal habilidade está em desenvolver aplicações full-stack. Utilizo JavaScript para criar APIs, JSON, interfaces intuitivas (com experiência em Figma), operando em ambientes Windows e Linux.  </p> 
 
-        <p class="description">Enquanto aluno da UniBh, desenvolvi alguns projetos Fullstack principalmente com Java 8.
+        <p class="description">Enquanto aluno da UniBh, desenvolvi alguns projetos Fullstack principalmente com Java 21.
             Meu portfólio de projetos, tanto acadêmicos quanto pessoais, demonstra minha capacidade de transformar conceitos em soluções funcionais:</p>    
 
             <ul class="description">
-                <li>Projetos Full-Stack com Java 8</li>
+                <li>Projetos Full-Stack com Java</li>
                 <li>Landing Pages com HTML5, CSS3, JavaScript (Vanilla)</li>
                 <li>ChatBot com Flutter</li>
-                <li>CRUDs (com arquitetura MVC) feito em Java 8, PHP e integração com MySQL</li>
-                <li>Bots de Análise de Dados com Python (Web Scraping com Selenium), PyTube, Tkinter, Openai</li>
+                <li>CRUDs (com arquitetura MVC) feito em Java, PHP e integração com MySQL</li>
+                <li>API-Restful - feita em JavaScript, Node.js, Express.js e integração com MySQL</li>
+                <li>Bots de Análise de Dados com Python (Web Scraping com Selenium), PyTube, Tkinter, Openai, Pandas, entre outras</li>
             </ul>
 
             <p class="description">Essas experiências práticas me capacitaram a aprimorar minhas habilidades em análise de código e desenvolvimento de sistemas.</p>
@@ -161,12 +162,12 @@
                 <div class="skills-box">
                     <p class="skills-title">Frameworks Front-end</p>
                     <i class="devicon-react-plain colored"></i>
-                    <i class="devicon-vuejs-plain colored"></i>
+                    <!--<i class="devicon-vuejs-plain colored"></i>-->
                 </div>
                 <div class="skills-box">
                     <p class="skills-title">Frameworks Back-end</p>
                     <i class="devicon-laravel-plain colored"></i>
-                    <i class="devicon-django-plain colored"></i>
+                    <!--<i class="devicon-django-plain colored"></i>-->
                 </div>
                 <div class="skills-box">
                     <p class="skills-title">Ferramentas</p>
